Developer/src/objects/UserInformationCriteria__c.object
<CustomObject>
    <fields>
        <fullName>AgeFrom__c</fullName>
        <label>年齢(From)</label>
        <picklist>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>31</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>33</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>34</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>37</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>38</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>39</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>41</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>42</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>43</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>44</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>46</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>47</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>48</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>49</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AgeTo__c</fullName>
        <label>年齢(To)</label>
        <picklist>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>31</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>33</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>34</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>37</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>38</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>39</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>41</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>42</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>43</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>44</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>46</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>47</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>48</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>49</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DistrictName__c</fullName>
        <label>地域名（検索用）</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>地域マスタ</label>
        <referenceTo>DistrictMaster__c</referenceTo>
        <relationshipLabel>ユーザー情報検索条件</relationshipLabel>
        <relationshipName>Dstrict</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FamilyList__c</fullName>
        <label>同居家族</label>
        <picklist>
            <picklistValues>
                <fullName>子供(男)　0歳～3歳</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>子供(男)　4歳～10歳</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>子供(男)　11歳～20歳</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>子供(男)　21歳～30歳</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>子供(男)　31歳～</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>子供(女)　0歳～3歳</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>子供(女)　4歳～10歳</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>子供(女)　11歳～20歳</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>子供(女)　21歳～30歳</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>子供(女)　31歳～</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>兄　0歳～3歳</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>兄　4歳～10歳</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>兄　11歳～20歳</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>兄　21歳～30歳</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>兄　31歳～</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>弟　0歳～3歳</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>弟　4歳～10歳</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>弟　11歳～20歳</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>弟　21歳～30歳</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>弟　31歳～</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>姉　0歳～3歳</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>姉　4歳～10歳</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>姉　11歳～20歳</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>姉　21歳～30歳</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>姉　31歳～</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>妹　0歳～3歳</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>妹　4歳～10歳</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>妹　11歳～20歳</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>妹　21歳～30歳</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>妹　31歳～</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>HasChildrenList__c</fullName>
        <label>子供</label>
        <picklist>
            <picklistValues>
                <fullName>いる</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>いない</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>JobStatusList__c</fullName>
        <label>職業</label>
        <picklist>
            <picklistValues>
                <fullName>無職</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>無職(定年)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>無職(主婦)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>アルバイト</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>パート</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>自営業</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>会社員</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Marriage__c</fullName>
        <label>婚姻状態</label>
        <picklist>
            <picklistValues>
                <fullName>既婚</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>未婚</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sex__c</fullName>
        <label>性別</label>
        <picklist>
            <picklistValues>
                <fullName>男性</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>女性</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>ユーザー情報検索条件</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>ユーザー情報検索条件名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>